frontend/src/components/MainMenu/MainMenuBar.module.css
.header {
  height: 3.5rem;
  margin-bottom: 3rem;
  background-color: var(--mantine-color-body);
  border-bottom: 1px solid
    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
}

.inner {
  height: 3.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}

.link {
  display: block;
  line-height: 1;
  padding: 0.5rem 0.75rem;
  border-radius: var(--mantine-radius-sm);
  text-decoration: none;
  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
  font-size: var(--mantine-font-size-sm);
  font-weight: 500;
}

.link:hover {
  background-color: light-dark(
    var(--mantine-color-gray-0),
    var(--mantine-color-dark-6)
  );
}

.linkLabel {
  margin-right: 0.4rem;
}

.link[aria-current="page"],
.link:has(+ div > a[aria-current="page"]) {
  background-color: var(--mantine-color-blue-5);
  color: white;
}

